--- a/src/App/style.css
+++ b/src/App/style.css
@@ -1,3 +1,12 @@
 body {
-  
+  user-select: none;
+}
+
+.container {
+  min-width: 100%;
+  text-align: center;
+}
+
+td:last-child, th:last-child {
+  text-align: left;
 }
